Performance improvements + Java style improvements (#8586)